--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,6 +1,67 @@
 node_modules/
 .env
 package-lock.json
-package.json
 eslint.config.js
-.gitignore
+information.txt/
+.vscode/
+dist/
+build/
+.DS_Store
+coverage/
+.cache/
+.next/
+out/
+.idea/
+*.log
+*.sqlite
+*.sqlite3
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+client/.env
+client/node_modules/
+client/.next/
+client/out/
+client/.cache/
+client/dist/
+client/.DS_Store
+client/coverage/
+
+client/build/
+client/.vscode/
+client/package-lock.json
+client/idea/
+client/*.log
+client/*.sqlite
+client/*.sqlite3
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
+client/pnpm-debug.log*
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
+client/.turbo/
+client/turbo.json
+client/.wrangler/
+client/wrangler.toml
+client/.vercel/
+client/vercel.json
+client/.netlify/
+client/netlify.toml
+client/.firebase/
+client/firebase.json
+client/firebaserc
+client/dist-ssr/
+client/ssr-build/
+client/.parcel-cache/
+client/.swc/
+client/.expo/
+client/expo.json
+client/web-build/
