--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,7 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "multer": "^2.0.2",
-    "openai": "^6.15.0",
-    "pdfjs-dist": "^5.4.530"
+    "openai": "^6.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
